--- a/service/templates/index.html
+++ b/service/templates/index.html
@@ -40,29 +40,29 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Введите четыре числа</h2>
+        <h2>Введите четыре параметра для предсказания стоимости квартиры</h2>
         <form id="numberForm">
-            <input type="number" id="num1" placeholder="Число 1" required>
-            <input type="number" id="num2" placeholder="Число 2" required>
-            <input type="number" id="num3" placeholder="Число 3" required>
-            <input type="number" id="num4" placeholder="Число 4" required>
-            <button type="button" onclick="submitForm()">Отправить</button>
+            <input type="number" id="number_of_rooms" placeholder="Количество комнат" required>
+            <input type="number" id="area" placeholder="Площадь" required>
+            <input type="number" id="flat_floor" placeholder="Этаж квартиры" required>
+            <input type="number" id="total_floors" placeholder="Этажность дома" required>
+            <button type="button" onclick="submitForm()">Предсказать стоимость</button>
         </form>
         <div id="response"></div>
     </div>
 
     <script>
         function submitForm() {
-            const num1 = document.getElementById('num1').value;
-            const num2 = document.getElementById('num2').value;
-            const num3 = document.getElementById('num3').value;
-            const num4 = document.getElementById('num4').value;
+            const number_of_rooms = document.getElementById('number_of_rooms').value;
+            const area = document.getElementById('area').value;
+            const flat_floor = document.getElementById('flat_floor').value;
+            const total_floors = document.getElementById('total_floors').value;
 
             const data = {
-                number1: num1,
-                number2: num2,
-                number3: num3,
-                number4: num4
+                number_of_rooms: number_of_rooms,
+                area: area,
+                flat_floor: flat_floor,
+                total_floors: total_floors
             };
 
             fetch('/api/numbers', {
